--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "zod": "^3.25.64"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@types/express": "^5.0.3",
     "@types/validator": "^13.15.1",
+    "eslint": "^9.30.1",
     "ts-node-dev": "^2.0.0"
   }
 }
