--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.2",
     "validator": "^13.15.15",
